implemented method to get tasks based on their status